Migrate to Java 11 (#10)
* update configuration.rst

* update testing.rst

* update testing.rst

* update testing.rst